--- a/client-side-app/package.json
+++ b/client-side-app/package.json
@@ -26,10 +26,12 @@
     "mongodb": "^6.12.0",
     "next": "15.1.6",
     "next-auth": "^4.24.11",
+    "node-fetch": "^3.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-simple-maps": "^3.0.0",
+    "react-spinners": "^0.15.0",
     "tailwindcss": "^4.0.0",
     "xml2js": "^0.6.2"
   },
