--- a/client-side-app/package.json
+++ b/client-side-app/package.json
@@ -17,13 +17,18 @@
     "@mui/icons-material": "^6.4.1",
     "@mui/material": "^6.4.1",
     "@prisma/client": "^6.2.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
     "@tailwindcss/postcss": "^4.0.0",
     "@types/leaflet": "^1.9.16",
     "@types/next-auth": "^3.15.0",
     "auth": "link:/auth",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.476.0",
     "mongodb": "^6.12.0",
     "next": "15.1.6",
     "next-auth": "^4.24.11",
@@ -34,7 +39,9 @@
     "react-icons": "^5.4.0",
     "react-simple-maps": "^3.0.0",
     "react-spinners": "^0.15.0",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.0",
+    "tailwindcss-animate": "^1.0.7",
     "xml2js": "^0.6.2",
     "zod": "^3.24.1"
   },
