--- a/client-side-app/package.json
+++ b/client-side-app/package.json
@@ -16,6 +16,7 @@
     "@hookform/resolvers": "^3.10.0",
     "@mui/icons-material": "^6.4.1",
     "@mui/material": "^6.4.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.2.1",
     "@tailwindcss/postcss": "^4.0.0",
     "@types/leaflet": "^1.9.16",
@@ -36,15 +37,14 @@
     "react-spinners": "^0.15.0",
     "tailwindcss": "^4.0.0",
     "xml2js": "^0.6.2",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/bcryptjs": "^2.4.6",
-    "@types/geojson": "^7946.0.16",
     "@types/node": "^20",
     "@types/react": "^19",
-    "@types/react-simple-maps": "^3.0.6",
     "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
