--- a/client-side-app/package.json
+++ b/client-side-app/package.json
@@ -38,6 +38,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "react-select": "^5.10.1",
     "react-simple-maps": "^3.0.0",
     "react-spinners": "^0.15.0",
     "tailwind-merge": "^3.0.2",
